fix menu berger on mobile versio

--- a/style/styles.css
+++ b/style/styles.css
@@ -2,6 +2,7 @@ html {
   scroll-behavior: smooth;
   width: 100%;
   background-color: #000;
+  scrollbar-gutter: stable;
 }
 
 /* === ИЗМЕНЕНО: ФОН === */
